# scanner/_gen/swagger/v1/scanner.swagger.json
@@ -110,6 +110,36 @@
         ]
       }
     },
+    "/v1/scan/{uuid}/retry": {
+      "post": {
+        "operationId": "ScannerService_RetryScan",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1RetryScanResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "uuid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "ScannerService"
+        ]
+      }
+    },
     "/v1/scans": {
       "get": {
         "operationId": "ScannerService_GetScans",
@@ -189,7 +219,10 @@
     "v1AddScanImageResponse": {
       "type": "object",
       "properties": {
-        "reportId": {
+        "jobId": {
+          "type": "string"
+        },
+        "statusCode": {
           "type": "string"
         }
       }
@@ -205,7 +238,10 @@
     "v1AddScanSbomResponse": {
       "type": "object",
       "properties": {
-        "reportId": {
+        "jobId": {
+          "type": "string"
+        },
+        "statusCode": {
           "type": "string"
         }
       }
@@ -258,6 +294,14 @@
         }
       }
     },
+    "v1RetryScanResponse": {
+      "type": "object",
+      "properties": {
+        "reportId": {
+          "type": "string"
+        }
+      }
+    },
     "v1Scan": {
       "type": "object",
       "properties": {
@@ -273,20 +317,13 @@
         "updatedAt": {
           "type": "string"
         },
-        "vulnerabilities": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "vulnerabilityCount": {
-          "type": "integer",
-          "format": "int32"
-        },
         "image": {
           "type": "string"
         },
-        "sbom": {
+        "imageTag": {
+          "type": "string"
+        },
+        "sbomId": {
           "type": "string"
         },
         "artifactId": {
@@ -296,6 +333,85 @@
           "type": "string"
         },
         "artifactVersion": {
+          "type": "string"
+        },
+        "report": {
+          "$ref": "#/definitions/v1ScanReport"
+        }
+      }
+    },
+    "v1ScanReport": {
+      "type": "object",
+      "properties": {
+        "uuid": {
+          "type": "string"
+        },
+        "image": {
+          "type": "string"
+        },
+        "createdAt": {
+          "type": "string"
+        },
+        "vulnerabilityCount": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "criticalCount": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "highCount": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "mediumCount": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "lowCount": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "vulnerabilities": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1ScanReportVulnerability"
+          }
+        }
+      }
+    },
+    "v1ScanReportVulnerability": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "severity": {
+          "type": "string"
+        },
+        "link": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "fixedVersion": {
+          "type": "string"
+        },
+        "package": {
+          "type": "string"
+        },
+        "packageVersion": {
+          "type": "string"
+        },
+        "packageType": {
+          "type": "string"
+        },
+        "packagePath": {
           "type": "string"
         }
       }
